# fastapi-start-template

./: .dockerignore  .env.example  README.md  pyproject.toml
docs/: scripts.md
scripts/: generate_key.py  run.py  startmodule.py
scripts/cli_tools/: output.py  templates.py  utils.py
src/: main.py
src/api/base_template_router/: endpoints.py
src/config/: gunicorn.py  schemas.py  settings.py  settings.toml  utils.py
tests/: test_template_router.py
